//
//
// db3_namespace.proto
// Copyright (C) 2022 db3.network Author imotai <codego.me@gmail.com>
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";
import "db3_base.proto";
package db3_namespace_proto;

message QueryPrice {
    db3_base_proto.Price price = 1;
    uint64 query_count = 2;
}

message Namespace {
    string name = 1;
    QueryPrice price = 2;
    uint64 ts = 3;
    string description = 4;
    db3_base_proto.BroadcastMeta meta = 5;
}
